--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-От тттопота копытт пппыль ппо ппполю леттитт.
-Какая-то абра-кадабра.
+var text = "От тттопота копытт пппыль ппо ппполю леттитт."
+var answer = "Какая-то абра-кадабра."
+
